# delta

./: Cargo.toml  Makefile  test.py
src/: actions.rs  data_file.rs  error.rs  lib.rs  main.rs  metadata.rs  schema.rs  table.rs
