[package]
name = "delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version=  "0.35.4", features = ["sql", "parquet", "lazy"]}
uuid = {version = "1.6.1", features=["v4", "fast-rng", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"